# Parrot options
option('build_gpslogger', type: 'feature', value: 'auto')
option('build_librepilot', type: 'feature', value: 'auto')
option('build_zephyr', type: 'feature', value: 'auto')
option('build_posix', type: 'feature', value: 'auto')
option('build_ironos', type: 'feature', value: 'auto')
option('build_infinitime', type: 'feature', value: 'auto')

# ARA options
option('arch', type: 'combo', choices: ['arm', 'i386'], value: 'arm',
    description: 'Set the architecture for which the test applications are built.')
option('gui_required', type: 'boolean', value: false,
    description: 'Set all dependencies of ara gui to required if this option is true')
option('python_optimization_level', type : 'integer', min : 0, max : 2, value : 0,
    description: 'Optimize python bytecode by the provided level. Levels 1 and 2 disable asserts so choose them wisely.')
option('build_examples_on_install', type: 'boolean', value: true,
    description: 'Build example applications to LLVM IR and include them on the installation (Currently only FreeRTOS apps). This does not invoke the Generator.')
option('ara_user_dir', type: 'string', value: '.ara',
    description: 'The path to ARAs user directory. All dumps will be stored in <ara_user_dir>/dumps if ARA is installed. Relative paths start from home directory $HOME')

option('enable_qemu_tests', type: 'boolean', value: true)
option('enable_step_tests', type: 'boolean', value: true,
    description: 'Unit tests for ARA itself.')
option('enable_toplevel_tests', type: 'boolean', value: true,
    description: 'Not actual tests, but stored common commandlines and examples for calling ARA.')
option('enable_posix_toplevel_tests', type: 'boolean', value: false,
    description: 'Allowed the execution of time intensive posix toplevel tests [toplevel tests are a way to store common commandlines (Not actual tests)]')
option('enable_gpslogger_tests', type: 'boolean', value: true)
option('enable_librepilot_tests', type: 'boolean', value: true)
option('enable_generator_tests', type: 'boolean', value: true,
    description: 'Test for the generator part of ARA (execute ARA and test the output')

option('execute_ara', type: 'boolean', value: true,
    description: 'Build targets which executes ARA')
option('enable_appl_graph_tests', type: 'boolean', value: true,
    description: 'instance graph tests for common applications.')
    
option('enable_zephyr_tests', type: 'boolean', value: true,
    description: 'All Zephyr tests are located in Zephyr/test. The enable_step_tests option will be ignored for Zephyr tests. Only activate these tests if you have a zephyr_project directory in build dir. This directory will be generated via init_zephyr.sh script')
option('enable_posix_tests', type: 'boolean', value: true,
    description: 'All POSIX tests are located in POSIX/test. The enable_step_tests option will be ignored for POSIX tests.')

option('arm_include_dirs', type: 'array', value: ['/usr/lib/arm-none-eabi/include'],
    description: 'A list of include dirs for compiling for ARM. Only relevant, if arch==arm.')
option('arm_link_dirs', type: 'array', value: ['/usr/lib/arm-none-eabi/newlib/thumb/v7-m/nofp/'],
    description: 'A list of link dirs for compiling for ARM. Only relevant, if arch==arm. (Sometimes need to remove trailing nofp/')
option('arm_gcc_version', type: 'string', value: 'default',
    description: 'The version of the GCC cross compiler for ARM. The special value of "default" assumes the same version like the system GCC. Only relevant, if arch==arm.')
option('arm_gcc_dir', type: 'string', value: '/usr/lib/gcc/arm-none-eabi/@0@/thumb/v7-m/nofp/',
    description: 'The path to the GCC ARM toolchain. Note that @0@ is replaced with the arm_gcc_version. Only relevant, if arch==arm. (Sometimes need to remove trailing nofp/)')

# Toolchain directories
option('zephyr_toolchain_dir', type: 'string', value: 'zephyrproject',
    description: 'The path where the zephyr toolchain (zephyrproject) should be located. Run the target init_zephyr_toolchain to generate this dir. Relative paths start from home directory $HOME')
option('riscv_toolchain_dir', type: 'string', value: 'riscv-toolchain-install',
    description: 'The path where the riscv gnu toolchain should be located. Run the target init_riscv_toolchain to generate this dir. Relative paths start from home directory $HOME')
option('infinitime_toolchain_dir', type: 'string', value: 'infinitime_toolchain_dir',
    description: 'The path where the infinitime toolchain should be located. Run the target init_infinitime_toolchain to generate this dir. Relative paths start from home directory $HOME')
