# Parrot options
option('build_gpslogger', type: 'boolean', value: true)
option('build_librepilot', type: 'boolean', value: true)
option('build_zephyr', type: 'boolean', value: true, description: 'Build sys_kernel and app_kernel related targets.')
option('build_ironos', type: 'boolean', value: true)
option('build_infinitime', type: 'boolean', value: true)
option('build_i4copter', type: 'boolean', value: true)
option('build_posix_apps', type: 'boolean', value: true, description: 'Create SIA and INA targets for several POSIX apps.')
option('build_libmicrohttpd', type: 'boolean', value: true, description: 'Include libmicrohttpd in the POSIX apps.')


option('offline', type: 'boolean', value: 'false', yield: true,
  description: 'Do not download anything (this is independant of Meson\'s internal subproject mechanisms).')

# ARA options
option('arch', type: 'combo', choices: ['arm', 'i386'], value: 'arm',
    description: 'Set the architecture for which the test applications are built.')
option('gui_required', type: 'boolean', value: false,
    description: 'Set all dependencies of ara gui to required if this option is true')
option('python_optimization_level', type : 'integer', min : 0, max : 2, value : 0,
    description: 'Optimize python bytecode by the provided level. Levels 1 and 2 disable asserts so choose them wisely.')

option('enable_qemu_tests', type: 'boolean', value: false)
option('enable_step_tests', type: 'boolean', value: true,
    description: 'Unit tests for ARA itself.')
option('enable_toplevel_tests', type: 'boolean', value: false,
    description: 'Not actual tests, but stored common commandlines and examples for calling ARA.')
option('enable_posix_toplevel_tests', type: 'boolean', value: true,
    description: 'Allowed the execution of time intensive posix toplevel tests [toplevel tests are a way to store common commandlines (Not actual tests)]')
option('enable_gpslogger_tests', type: 'boolean', value: true)
option('enable_librepilot_tests', type: 'boolean', value: true)
option('enable_generator_tests', type: 'boolean', value: false,
    description: 'Test for the generator part of ARA (execute ARA and test the output')

option('execute_ara', type: 'boolean', value: true,
    description: 'Build targets which executes ARA')
option('enable_appl_graph_tests', type: 'boolean', value: true,
    description: 'instance graph tests for common applications.')

option('enable_zephyr_tests', type: 'boolean', value: true,
    description: 'All Zephyr tests are located in Zephyr/test. The enable_step_tests option will be ignored for Zephyr tests. Only activate these tests if you have a zephyr_project directory in build dir. This directory will be generated via init_zephyr.sh script')
option('enable_posix_tests', type: 'boolean', value: true,
    description: 'All POSIX tests are located in POSIX/test. The enable_step_tests option will be ignored for POSIX tests.')

# Toolchain directories
option('zephyr_toolchain_dir', type: 'string', value: 'zephyrproject',
    description: 'The path where the zephyr toolchain (zephyrproject) should be located. Run the target init_zephyr_toolchain to generate this dir. Relative paths start from home directory $HOME')
option('riscv_toolchain_dir', type: 'string', value: 'riscv-toolchain-install',
    description: 'The path where the riscv gnu toolchain should be located. Run the target init_riscv_toolchain to generate this dir. Relative paths start from home directory $HOME')
option('infinitime_toolchain_dir', type: 'string', value: 'infinitime_toolchain_dir',
    description: 'The path where the infinitime toolchain should be located. Run the target init_infinitime_toolchain to generate this dir. Relative paths start from home directory $HOME')
