# Parrot options
option('build_gpslogger', type: 'boolean', value: true)
option('build_librepilot', type: 'boolean', value: true)
option('build_zephyr', type: 'boolean', value: true, description: 'Build sys_kernel and app_kernel related targets.')
option('build_intel_ecfw', type: 'boolean', value: true, description: 'Build the Zephyr-based Intel embedded controller firmware')
option('build_ironos', type: 'boolean', value: true)
option('build_infinitime', type: 'boolean', value: true)
option('build_i4copter', type: 'boolean', value: true)
option('build_posix_apps', type: 'boolean', value: true, description: 'Create SIA and INA targets for several POSIX apps.')
option('build_autosar_apps', type: 'boolean', value: true, description: 'Create SSE and MultiSSE targets for several AUTOSAR apps.')
option('build_libmicrohttpd', type: 'boolean', value: true, description: 'Include libmicrohttpd in the POSIX apps.')
option('build_synthetic_apps', type: 'boolean', value: true, description: 'Include pregenerated synthetic_apps.')


option('offline', type: 'boolean', value: 'false', yield: true,
  description: 'Do not download anything (this is independent of Meson\'s internal subproject mechanisms).')

option('execute_ara', type: 'boolean', value: true, description: 'Build targets which execute ARA')

option('rpi_host', type: 'string', value: 'lab-pc67', description: 'SSH host for PC that it connected via serial to the Raspberry Pi measurement PC.')
